version 1.0!!! (hopefully) you no longer need the fabric api to use this mod (uses mixin insead of event listener thing) updated the license to mit u can use version 1.16 and up